adjust padding on navContent reduced font size on small and large devices added fixed width to logo on mobile and larger devices uppercase on the nav list items added underline

--- a/styles/Navigation.module.css
+++ b/styles/Navigation.module.css
@@ -11,6 +11,7 @@
 .navContent {
     width: 95%;
     margin: 0 auto;
+    padding: 0 2em;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -18,7 +19,7 @@
 
 .navTitle {
     font-family: 'M PLUS Rounded 1c', sans-serif;
-    font-size: 1.1em;
+    font-size: 1em;
     letter-spacing: 2px;
     text-transform: uppercase;
     font-weight: 900;
@@ -53,7 +54,7 @@
 }
 
 .logoImage{
-    width: 100%;
+    width: 35px;
     margin-right: 1em;
 }
 
@@ -75,8 +76,18 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: stretch;
     height: 100%;
+    text-transform: uppercase;
+}
+
+.navListItem {
+    border-bottom: 1px solid var(--color-highlight-2);
+    padding: 1em;
+}
+
+.navListItem:last-of-type {
+    border-bottom: none;
 }
 
 .navLink {
@@ -182,8 +193,8 @@
     margin: 0;
 }
 
-.navList li a:hover,
-.navOpen .navList li a:active {
+.navLink:hover,
+.navOpen .navLink:active {
     color: var(--color-highlight);
 }
 
@@ -278,6 +289,16 @@
         left: 0;
         opacity: 1;
     }
+    
+    .logoImage{
+        width: 60px;
+        margin-right: 1em;
+    }
+
+    .navTitle {
+        font-size: 1.3em;
+        letter-spacing: 3px;
+    }
 
     .navList {
         flex-direction: row;
@@ -286,12 +307,16 @@
         margin: 0;
     }
 
+    .navListItem {
+        border-bottom: none;
+    }
+
 
     .navLink {
         color: var(--color-primary);
         text-decoration: none;
         font-weight: 700;
-        padding: 0 1em;
+        padding: 0 0.2em;
 
         text-decoration: none;
     }
